@@ -1,5 +1,7 @@
 4.1.2
   15-09-07
+  New Features
+  * #i0030: slick optimisation for tt_content.images
   Improvement
   * #i0029: tt_content optimisation added for image layout: 1, 2, 8, 9, 10, 17, 18
   * #i0028: td.space for grid elements
